<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow
                android:id="@+id/row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/myrect"
                >
                <ImageView
                    android:id="@+id/burger"
                    android:src="@mipmap/burger"
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    />
                <TableLayout>
                    <TableRow>
                    <TextView
                        android:id="@+id/title_burger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_burger"
                        android:textSize="25sp"
                        style="@style/WhiteText"
                        />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/date_burger"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="date"
                            android:textSize="25sp"
                            style="@style/WhiteText"/>
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow
                android:id="@+id/row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/myrect"
                >
                <ImageView
                    android:id="@+id/steak"
                    android:src="@mipmap/steak"
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    />
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:id="@+id/title_steak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_steak"
                            android:textSize="25sp"
                            style="@style/WhiteText"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/date_steak"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="date"
                            android:textSize="25sp"
                            style="@style/WhiteText"/>
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow
                android:id="@+id/row3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/myrect"
                >
                <ImageView
                    android:id="@+id/pasta"
                    android:src="@mipmap/pasta"
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    />
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:id="@+id/title_pasta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_pasta"
                            android:textSize="25sp"
                            style="@style/WhiteText"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/date_pasta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="date"
                            android:textSize="25sp"
                            style="@style/WhiteText"/>
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow
                android:id="@+id/row4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/myrect"
                >
                <ImageView
                    android:id="@+id/pizza"
                    android:src="@mipmap/pizza"
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    />
                <TableLayout>
                    <TableRow>
                        <TextView
                            android:id="@+id/title_pizza"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_pizza"
                            android:textSize="25sp"
                            style="@style/WhiteText"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/date_pizza"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="date"
                            android:textSize="25sp"
                            style="@style/WhiteText"/>
                    </TableRow>
                </TableLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>